--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
     "pinia": "^2.1.7",
+    "primevue": "^3.49.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
