--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,26 +13,26 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@vueuse/core": "^10.9.0",
-    "pinia": "^2.1.7",
-    "primevue": "^3.49.1",
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "@vueuse/core": "10.9.0",
+    "pinia": "2.1.7",
+    "primevue": "3.49.1",
+    "vue": "3.4.15",
+    "vue-router": "4.2.5"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@tsconfig/node20": "^20.1.2",
-    "@types/node": "^20.11.10",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.5.1",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "npm-run-all2": "^6.1.1",
-    "prettier": "^3.0.3",
-    "typescript": "~5.3.0",
-    "vite": "^5.0.11",
-    "vue-tsc": "^1.8.27"
+    "@rushstack/eslint-patch": "1.3.3",
+    "@tsconfig/node20": "20.1.2",
+    "@types/node": "20.11.10",
+    "@vitejs/plugin-vue": "5.0.3",
+    "@vue/eslint-config-prettier": "8.0.0",
+    "@vue/eslint-config-typescript": "12.0.0",
+    "@vue/tsconfig": "0.5.1",
+    "eslint": "8.49.0",
+    "eslint-plugin-vue": "9.17.0",
+    "npm-run-all2": "6.1.1",
+    "prettier": "3.0.3",
+    "typescript": "5.3.0",
+    "vite": "5.0.11",
+    "vue-tsc": "1.8.27"
   }
 }
