--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@vueuse/core": "10.9.0",
+    "axios": "^1.6.7",
     "pinia": "2.1.7",
     "primevue": "3.49.1",
     "vue": "3.4.15",
-    "vue-router": "4.2.5"
+    "vue-router": "4.2.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "1.3.3",
@@ -31,7 +33,7 @@
     "eslint-plugin-vue": "9.17.0",
     "npm-run-all2": "6.1.1",
     "prettier": "3.0.3",
-    "typescript": "5.3.0",
+    "typescript": "^5.3.0",
     "vite": "5.0.11",
     "vue-tsc": "1.8.27"
   }
