--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "prisma": "5.10.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "bcrypt": "5.1.1",
     "body-parser": "1.20.2",
     "cors": "2.8.5",
