--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@unhead/vue": "^1.9.3",
     "@vueuse/core": "10.9.0",
     "axios": "^1.6.7",
     "pinia": "2.1.7",
@@ -40,7 +41,7 @@
     "npm-run-all2": "6.1.1",
     "prettier": "3.0.3",
     "typescript": "^5.3.0",
-    "vite": "5.0.11",
+    "vite": "^5.0.11",
     "vue-tsc": "1.8.27"
   }
 }
