--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "prettier": "3.0.3",
     "typescript": "^5.3.0",
     "vite": "^5.0.11",
+    "vite-plugin-pwa": "^0.19.7",
     "vue-tsc": "1.8.27"
   }
 }
