--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,10 @@
     "express": "4.18.3",
     "json": "11.0.0",
     "jsonwebtoken": "9.0.2",
+    "mailgen": "^2.0.28",
     "morgan": "1.10.0",
     "multer": "1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "sharp": "0.33.2",
     "zod": "3.22.4"
   }
