--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@vueuse/core": "10.9.0",
     "axios": "^1.6.7",
     "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "pinia": "2.1.7",
     "primevue": "^3.50.0",
     "vue": "3.4.15",
